--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -14,7 +14,10 @@
   "author": "Sayli Patil <sayli@matic.network>",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
+    "figlet": "^1.2.3",
     "maticjs": "1.0.0-beta.16",
+    "ora": "^3.4.0",
     "web3": "1.0.0-beta.34"
   }
 }
